--- a/src/pages/testimonials/testimony.css
+++ b/src/pages/testimonials/testimony.css
@@ -30,7 +30,7 @@ img#handsOnPhoto {
 .quoteRow {
     display: flex;
     flex-direction: row;
-    place-items: center;
+    align-items: start;
     height: 175px;
     /* border: solid green; */
 }
@@ -48,6 +48,7 @@ img#handsOnPhoto {
 @media (min-width: 768px) {
     #quotes h2 {
         font-size: 35px;
+        margin-bottom: 30px;
     }
 
     #quotes p {
@@ -64,6 +65,7 @@ img#handsOnPhoto {
     img#handsOnPhoto {
         width: 280px;
         margin: 0 auto;
+        padding-top: 15px;
     }
 
     #testimonyContainer {
