--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
 }
 
 .page {
-  margin-bottom: 100px;
-  margin-top: 65px;
+  margin-bottom: 50px;
+  margin-top: 55px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1280px;
@@ -31,8 +31,9 @@
 @media (max-width: 768px) {
   .page {
     max-width: 330px;
-    margin-bottom: 70px;
-    margin-top: 35px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 15px 0;
   }
 
 }
