--- a/src/elements/navBar/navBar.css
+++ b/src/elements/navBar/navBar.css
@@ -32,6 +32,10 @@ a {
     column-gap: 8px;
 }
 
+#miniLogo {
+    cursor: pointer;
+}
+
 @media (prefers-color-scheme: light) {
     #navBar {
         color: black;
