--- a/src/pages/whatToExpect/wte.css
+++ b/src/pages/whatToExpect/wte.css
@@ -1,5 +1,38 @@
+#wteTextContainer {
+    display: flex;
+    flex-direction: column;
+    place-items: start;
+    row-gap: 30px;
+    width: 50%;
+    /* border: solid blue */
+}
+
+#wte {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /* border: dotted green; */
+}
+
+#wteButtonContainer {
+    /* border: solid red; */
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#wteButtonContainer a {
+    letter-spacing: 0.05em;
+}
+
+#wteButtonContainer a:hover {
+    color: white;
+}
+
+
 @media (min-width: 600px) {
-    #secondaryButton {
+    #wteButtonContainer a {
         box-sizing: border-box;
         background-color: white;
         color: #DA4643;
@@ -13,26 +46,21 @@
         cursor: pointer;
         font-size: medium;
         transition: 0.5s ease;
-        font-weight: 550;
+        font-weight: 650;
 
-        width: 200px;
+        width: 300px;
         height: 50px;    
     }    
 }
 
 
-#secondaryButton:hover {
+#wteButtonContainer a:hover {
     background-color: #DA4643;
     color: white;
 }
 
-a#secondaryButton {
-    font-weight: 550;
-    font-size: 1.1em;
-}
-
 @media (max-width: 600px) {
-    #secondaryButton {
+    #wteButtonContainer a {
         box-sizing: border-box;
         background-color: white;
         color: #DA4643;
@@ -45,7 +73,7 @@ a#secondaryButton {
         
         cursor: pointer;
         transition: 0.5s ease;
-        font-weight: 550;
+        font-weight: 650;
 
         font-size: small;
         gap: 5px;
@@ -53,8 +81,12 @@ a#secondaryButton {
         height: 25px;   
     }
     
-    #secondaryButton:active {
+    #wteButtonContainer a:active {
         background-color: #DA4643;
         color: white;
     }
+}
+
+#wte h1, #wte p {
+    text-align: left;
 }
