--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,15 @@
   margin: 0 auto;
 }
 
+p {
+  font-size: 20px;
+}
+
 .background {
   width: 100vw;
   max-width: none;
+  scroll-margin-top: 50px;
+  scroll-behavior: smooth;
 }
 
 .page {
@@ -33,7 +39,7 @@
     max-width: 330px;
     margin-bottom: 10px;
     margin-top: 10px;
-    padding: 15px 0;
+    padding: 55px 0;
   }
 
 }
