--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -13,7 +13,6 @@
 }   
 
 #aboutContainer {
-    padding: 10px 0;
     width: 70%;
     margin: 0 auto;
     display: grid;
@@ -27,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    margin-top: 30px;
+
 }
 
 .section p {
@@ -36,17 +35,16 @@
 }
 
 
-#mainPara {
+#mainPara p {
     padding: 25px 0;
     grid-column: 1 / span 3;
     text-align: center;
-    font-size: 1.1em;
 }
 
 #aboutContainer h1 {
     grid-column: 1 / span 3;
     text-align: center;
-    font-size: 55px;
+    font-size: 30px;
 }
 
 #section1 {
@@ -85,9 +83,7 @@
         width: 100%;
     }
 
-    #aboutContainer h1 {
-        font-size: 35px;
-    }
+
 
     #section1 {
         height: 300px; 
