--- a/src/pages/apply/apply.css
+++ b/src/pages/apply/apply.css
@@ -3,12 +3,27 @@
     flex-direction: column;
     place-items: center;
     row-gap: 30px;
-    padding: 50px 0;
+    text-align: center;
+    width: 60%;
 }
 
-@media (prefers-color-scheme: light) {
+#apply p {
+    text-align: center;
+}
+
+#apply span {
+    text-decoration: underline;
+    color: #DA4643;
+    text-align: center;
+    display: inline;
+    font-style: normal;
+    cursor: pointer;
+}
+
+
+/* @media (prefers-color-scheme: light) {
     #applyBackground {
         background-color: #FFF6F6;
         height: fit-content;
     }   
-}
+} */
