--- a/src/pages/donate/donate.css
+++ b/src/pages/donate/donate.css
@@ -1,26 +1,71 @@
-.provision {
+.method {
     display: flex;
     flex-direction: column;
-    border: solid  lightgray;
-    place-items: center;
-    row-gap: 10px;
+    justify-content: space-between;
+    align-items: center;
     padding: 12px 8px;
     margin: 0 5px;
     width: 250px;
+    height: 250px;
+    cursor: pointer;
 }
 
-.provision p {
+/* @media (prefers-color-scheme: light) {
+    #donateBackground {
+        background-color: #FFF6F6;
+        height: fit-content;
+    }   
+} */
+
+@media (max-width: 768px) {
+    .method {
+        width: 75px;
+    }
+}
+
+.method p {
     text-align: center;
 }
 
-#provisions {
+#methods {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    width: 90%;
 }
 
 #donate {
     display: flex;
     flex-direction: column;
     place-items: center;
-    row-gap: 30px;
+    row-gap: 40px;
+
+    text-align: center;
+}
+
+@media (max-width: 600px) {
+    #methods {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+    }
+
+    .method {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+        align-items: center;
+        padding: 12px 8px;
+        margin: 0 5px;
+        width: 100%;
+        height: fit-content;
+    }
+}
+
+.icon {
+    font-size: 50px;
+    color: #DA4643;
+    cursor: pointer;
 }
