--- a/src/walkthrough/walkthrough.css
+++ b/src/walkthrough/walkthrough.css
@@ -1,14 +1,135 @@
 #walkthrough {
-    height: 90vh;
-    width: 95vw;
+    width: 100vw;
+    height: 95vh;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    place-content: center;
-    /* border: solid red; */
-    margin: 0 2vw;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* border: dotted green; */
+    padding: 1em;
 }
 
-#text {
-    /* border: green dotted; */
-    text-align: center;
+#dayNavFooter {
+    align-self: start;   
+    display: flex;
+    flex-direction: row; 
+}
+
+.dayButton {
+    background-color: white;
+    /* color: white; */
+    font-size: 3em;
+    border: none;
+    width: fit-content;
+    padding: 0.5rem 1.5rem;
+    cursor: pointer;
+    display: flex;
+    place-content: center;
+    border: solid #DA4643
+
+}
+
+img {
+    max-width: 425px;
+    max-height: 400px;
+}
+
+.dayContainer {
+    border: solid pink;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+#dayTitleButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#dayTitleButton button {
+    width: 8%;
+    border: none;
+    width: fit-content;
+    font-size: 2em;
+    background-color: white;
+    color: #DA4643;
+    cursor: pointer;
+}
+
+#dayName {
+    background-color: #DA4643;
+    color: white;
+    padding: 5px 12px;
+    width: fit-content;
+}
+
+#halfDay {
+    width: 100%;
+    /* height: 100%; */
+    /* display: grid;
+    grid-template-columns: auto auto;
+    gap: 15px; */
+    display: flex;
+    flex-direction: column;
+    /* border: solid green; */
+}
+
+/* .activity {
+    border: solid #DA4643;
+    box-shadow: 8px 8px #DA4643;
+    
+} */
+
+
+#onePhoto {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#onePhoto .textContent {
+    width: 40%;
+}
+
+#noPhotos {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    padding: 8px;
+    height: fit-content;
+}
+
+#multiPhoto {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    row-gap: 10px;
+    padding: 15px;
+    grid-column: 1 / 2;
+}
+
+#multiPhoto div {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+}
+
+.EOD {
+    grid-column: 1;
+    display: flex;
+    flex-direction: row;
+    place-items: center;
+    font-size: larger;
+    width: fit-content;
+    height: fit-content;
+    align-self: center;
+    border: solid #DA4643;
+    box-shadow: 8px 8px #DA4643;
+    padding: 15px;
+    margin-top: 2em;
 }
