--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.2;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: white;
-  background-color: black;
+  /* color-scheme: light dark; */
+  color: black;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,9 +25,9 @@ body {
 }
 
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: black;
     background-color: #ffffff;
   }
-}
+} */
