footer,faq,contributors

--- a/src/pages/footer/footer.css
+++ b/src/pages/footer/footer.css
@@ -18,8 +18,8 @@
 #socialMediaIcons {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    width: 10%;
+    column-gap: 10px;
+
     font-size: 25px;
     color: white;
 }
