--- a/src/pages/hero/hero.css
+++ b/src/pages/hero/hero.css
@@ -6,17 +6,18 @@
     box-sizing: border-box;
 }
 
-
+#heroBackground {
+        background-color: #FFF6F6;
+        height: fit-content;
+}  
 
 .heroContainer {
     padding: 50px 0;
 }
 
-@media (prefers-color-scheme: light) {
-    #heroBackground {
-        background-color: #FFF6F6;
-        height: fit-content;
-    }   
+#logo p {
+    font-size: small;
+    justify-self: center;
 }
 
 @media (min-width: 768px) {
@@ -29,8 +30,9 @@
     }
 
     .textContent {
-        display: grid;
-        align-content: space-between;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
     }
 
     #buttons {
@@ -38,6 +40,7 @@
         grid-template-columns: auto auto;
         column-gap: 25px;
         justify-content: start;
+        padding-top: 15px;
     }
     
     .heroContainer h1 {
@@ -54,8 +57,8 @@
         display: block;
     }
 
-    #logoImg {
-        width: 400px;
+    #heroImg {
+        width: 450px;
     }    
 
     
@@ -70,7 +73,7 @@
         justify-content: center;
         padding-top: 55px;
     }
-    #logoImg {
+    #heroImg {
         width: 300px;
         justify-self: center;
     }
