--- a/src/pages/whatToExpect/wte.css
+++ b/src/pages/whatToExpect/wte.css
@@ -1,15 +1,13 @@
-@media (prefers-color-scheme: light) {
-    #wteBackground {
-        background-color: #FFF6F6;
-        height: fit-content;
-    }   
+#wteBackground {
+    background-color: #FFF6F6;
+    height: fit-content;
 }
 
 #wte {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px 0;
+    padding: 35px 0;
 }
 
 #wteContainer {
@@ -20,18 +18,41 @@
 }
 
 #wteTextContainer {
-    display: flex;
-    flex-direction: column;
-    place-items: start;
-    row-gap: 30px;
-    width: 50%;
+    display: grid;
+    grid-template-columns: 30% 31% 32%;
     padding: 30px 0;
-    /* border: solid blue */
+    /* border: solid blue; */
+    justify-content: space-between;
 }
 
-#wteButtonContainer {   
+#wteTextContainer h3 {
+    background-color: #DA4643;
+    padding: 3px 8px;
+    width: fit-content;
+    color: white;
+    font-style: italic;
+    font-weight: 900;
+    font-size: 1.5em;
+}
+
+.wteSection {
     display: flex;
-    place-items: center;
+    flex-direction: column;
+    row-gap: 2em;
+    padding: 1em;
+    border: solid #DA4643;
+    box-shadow: 8px 8px #DA4643;
+}
+
+#whenWhere {
+    display: flex;
+    flex-direction: column;
+    row-gap: 35px;
+}
+
+#wteTextContainer img {
+    max-width: 250px;
+    align-self: center;
 }
 
 #wteButton {
@@ -43,10 +64,12 @@
     border-color: #DA4643;
     cursor: pointer;
     transition: 0.5s ease;
-    font-weight: 650;
-    padding: 12px;
-    letter-spacing: 0.05em;
-
+    font-weight: 600;
+    padding: 10px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    width: fit-content;
+    align-self: center;
 }
 
 #wteButton:hover {
@@ -64,13 +87,16 @@
     }
 
     #wteTextContainer {
+        display: flex;
+        flex-direction: column;
+        row-gap: 2em;
         place-items: center;
         width: 100%;
     }
 
     #wteButton {
         font-size: small;
-        width: 220px;
+
         height: 30px;
         padding: 5px;
     }
