--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ p {
 .background {
   width: 100vw;
   max-width: none;
-  scroll-margin-top: 50px;
+  scroll-margin-top: 110px;
   scroll-behavior: smooth;
 }
 
@@ -40,6 +40,10 @@ p {
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 55px 0;
+  }
+
+  p {
+    font-size: 15px;
   }
 
 }
