--- a/src/pages/quoteBlock/quoteBlock.css
+++ b/src/pages/quoteBlock/quoteBlock.css
@@ -20,3 +20,12 @@
     line-height: 1.5em;
 }
 
+@media (max-width: 768px) {
+    #quoteBlockContainer h1 {
+        text-align: center;
+        width: 80%;
+        font-size: 2em;
+        line-height: 1.5em;
+    }
+}
+
